# gtk-scribble-app

./: Cargo.toml
src/: main.rs
