[package]
name = "gtk-app"
version = "0.1.0"
authors = ["johncf <johncf@protonmail.com>"]

[dependencies.gio]
git = "https://github.com/gtk-rs/gio"
version = "0.1.1"

[dependencies.gdk]
git = "https://github.com/gtk-rs/gdk"
version = "0.5.1"

[dependencies.glib]
git = "https://github.com/gtk-rs/glib"
version = "0.1.1"

[dependencies.gtk]
git = "https://github.com/gtk-rs/gtk"
version = "0.1.1"

[dependencies.cairo-rs]
git = "https://github.com/gtk-rs/cairo"
version = "0.1.1"

[dependencies.gdk-pixbuf]
git = "https://github.com/gtk-rs/gdk-pixbuf"
version = "0.1"

[dependencies.gdk-sys]
git = "https://github.com/gtk-rs/sys"
version = "0.3"
